--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
@@ -7,15 +7,8 @@
 	font-size: v.$common-font-size;
 	font-family: Arial, Helvetica, sans-serif;
 
-	.static-container {
-		padding-top: 10px;
-	}
-
-	.over-flow-container,
-	.js-get-over-flow-container {
-		padding-bottom: 30px;
-		// Height found by eyeing it to make resize (using js) look less jumpy
-		height: 80vh;
+	.sub-over-flow-container,
+	.js-get-nav-panel-button-list-component-sub-over-flow-container {
 		overflow-y: auto;
 		overflow-x: hidden;
 
@@ -43,11 +36,11 @@
 		}
 	}
 
-	.over-flow-container--scrollbar-present,
-	.js-get-over-flow-container--scrollbar-present {
-		margin-top: 10px;
-		padding-top: 10px;
-		box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1);
+	.sub-over-flow-container--scrollbar-present,
+	.js-get-nav-panel-button-list-component-sub-over-flow-container--scrollbar-present {
+		margin: 10px 0;
+		padding: 10px 0 40px 0;
+		box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1), inset 0 -7px 9px -7px rgba(0, 0, 0, 0.1);
 	}
 
 	.item-button,
@@ -65,6 +58,10 @@
 	// Overwrites padding for main items
 	.item-button {
 		padding: 0px v.$nav-panel-button-list-main-item-padding-left-right;
+	}
+
+	.item-button--first {
+		margin-top: 10px;
 	}
 
 	.item-button__icon {
