--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -481,6 +481,7 @@ $common-top-bar-filter-button-dropdown-label-margin: 4px 3px;
 // Specific (i.e. intended for specific component)
 $nav-panel-button-margin-left-right: 10px;
 $nav-panel-button-icon-margin-right: 10px;
+$nav-panel-button-list-sub-overflow-container-margin-top-bottom: 10px;
 $account-sidebar-contents-margin-top-bottom: 9px;
 $account-sidebar-dividing-line-margin-top-bottom: 34px;
 $account-sidebar-dividing-line-margin-top-bottom-half: $account-sidebar-dividing-line-margin-top-bottom /
